@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -54,13 +54,13 @@ public class decltype008a {
 class decltype008aOtherClass extends decltype008aMainClass {
     // All contructors from decltype008aOtherClass starts with reference to String object
     public decltype008aOtherClass(String S, float f) {
-        super(new Long(1), f);
+        super(Long.valueOf(1), f);
     };
     private decltype008aOtherClass(String S, Object obj){
-        super(new Long(1), obj);
+        super(Long.valueOf(1), obj);
     };
     protected decltype008aOtherClass(String S, long[] l) {
-        super(new Long(1), l);
+        super(Long.valueOf(1), l);
     };
 
     static double cd;
@@ -87,7 +87,7 @@ class decltype008aMainClass {
     static long[] cl = new long[10];
 
     static { ci = 1; }
-    static { cL = new Long(1l); }
+    static { cL = Long.valueOf(1l); }
     static {
         for (int i = 0; i < 10; i++) {
             cl[i] = (long)i;
